# lexer_project

./: AddAutomaton.h  Automaton.h  BlockCommentAutomaton.h  CMakeLists.txt  ColonAutomaton.h  CommaAutomaton.h  DataLog.h  Database.h  FactsAutomaton.h  Header.h  IdAutomaton.h  Interpreter.cpp  Interpreter.h  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  LineCommentAutomaton.h  MultiplyAutomaton.h  Node.h  Parameter.h  Parser.cpp  Parser.h  PeriodAutomaton.h  Predicate.h  QueriesAutomaton.h  QuestionMarkAutomaton.h  Relation.h  RightParenAutomaton.h  Rule.h  RulesAutomaton.h  SchemesAutomaton.h  StringsAutomata.h  Token.cpp  Token.h  Tuple.h  UnterminatedBlockCommentAutomaton.h  UnterminatedStringAutomaton.h  graph.h  main.cpp  makefile
testcases2/: custom.txt  in21.txt  in62.txt
